# claude-code-product-os

./: .gitignore  .gitmodules  README.md  rapid-prototype.sh
Documents/Coding Projects/WORK/baby lasso/: .gitignore  CLAUDE.md  DESIGN_SYSTEM.md  README.md  design-reference-tracker.md  package.json  tailwind.config.js  vite.config.ts
Documents/Coding Projects/WORK/baby lasso/.vercel/: project.json
Documents/Coding Projects/WORK/baby lasso/src/: index.css  main.tsx  minimal-test.tsx  safe-showcase.tsx
Documents/Coding Projects/WORK/baby lasso/src/lib/: Uicons.tsx  icons.tsx  (+1 more)
Documents/Coding Projects/WORK/baby-scout/tasks/: tasks-prd-dragons-legacy-asset-management.md
Documents/LLM CONTEXT/: .gitignore
Documents/LLM CONTEXT/AudoPaper/: AGENTS.md  CLAUDE.md  README.md  audo-bug-analysis-report.md  llms.txt
Documents/LLM CONTEXT/AudoPaper/experiments/: accessibility-testing-implementation-experiment.md  api-services-integration-experiment.md  voice-first-ui-components-experiment.md  voice-services-infrastructure-experiment.md
Documents/LLM CONTEXT/AudoPaper/research/: README.md  architecture.md  automation-mode.md  compare-prd-vs-exploration.md  data-sources-and-legality.md  journal-ingest-sources.md  journal-onboarding-checklist.md  pipeline-adaptation-voice-first-ios.md  pipeline-prompts.md  rollout-and-metrics.md
Documents/LLM CONTEXT/AudoPaper/scripts/: swift-safety-audit.sh
Documents/LLM CONTEXT/AudoPaper/tasks/: README.md  prd-audo-reader.md  tasks-audo-bug-analysis-report.md  tasks-prd-audo-reader.md
Documents/LLM CONTEXT/Daily-notes/: 2025-09-26.md
Documents/LLM CONTEXT/WORK/DWA-PROJECT-HOME/: .gitignore  sync-granola.py
Documents/LLM CONTEXT/WORK/DWA-PROJECT-HOME/00-inbox/: README.md
Documents/LLM CONTEXT/WORK/DWA-PROJECT-HOME/commands/: README.md
Documents/LLM CONTEXT/WORK/baby lasso/: agents.md  index.html  package-lock.json  tsconfig.json  tsconfig.node.json
Documents/LLM CONTEXT/WORK/baby lasso/src/: index.css
Documents/LLM CONTEXT/cursor-web-bridge/: README.md  package.json
Documents/LLM CONTEXT/cursor-web-bridge/bridge-server/: index.js  package.json
Documents/LLM CONTEXT/cursor-web-bridge/browser-extension/: background.js  content-script.js  manifest.json
Documents/LLM CONTEXT/cursor-web-bridge/cursor-extension/: extension.js  package.json
Documents/LLM CONTEXT/cursor-web-bridge/scripts/: install-cursor.js  package-browser.js  package-cursor.js
Documents/LLM CONTEXT/data-dictionary/.claude/agents/: bug-hunter-detective.md  openai-api-researcher.md
Documents/LLM CONTEXT/data-dictionary/app/: .env.example  jest.config.js  package-lock.json  package.json
Documents/LLM CONTEXT/data-dictionary/app/src/: App.tsx  index.css  main.tsx
Documents/LLM CONTEXT/data-dictionary/ref-docs/: Lasso Data Dictionary - Workflow Enhancements - RUM actions.csv  Lasso Data Dictionary - Workflow Enhancements - RUM context.csv  Why Most Analytics Efforts Fail — Reforge.md  crystal_widjaja_analytics_advice.md
Documents/LLM CONTEXT/data-dictionary/tasks/: prd-data-dictionary-generator.md  tasks-prd-data-dictionary-generator.md
Documents/LLM CONTEXT/data-dictionary/tmp-research-audits/: openai-implementation-audit-report.md
prototype-templates/fullstack-template/: README.md  docker-compose.yml
prototype-templates/fullstack-template/shared/types/: api.ts
prototype-templates/ios-swiftui-template/: README.md
prototype-templates/ios-swiftui-template/ProjectNamePlaceholder/: ContentView.swift  ProjectNamePlaceholderApp.swift
prototype-templates/ios-swiftui-template/ProjectNamePlaceholder.xcodeproj/: project.pbxproj
prototype-templates/ios-swiftui-template/ProjectNamePlaceholder/Utilities/: Constants.swift
prototype-templates/ios-swiftui-template/ProjectNamePlaceholderTests/: ProjectNamePlaceholderTests.swift
prototype-templates/ios-swiftui-template/ProjectNamePlaceholderUITests/: ProjectNamePlaceholderUITests.swift  ProjectNamePlaceholderUITestsLaunchTests.swift
prototype-templates/langflow-ai-template/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
prototype-templates/langflow-ai-template/app/: main.py
prototype-templates/langflow-ai-template/app/api/: __init__.py
prototype-templates/langflow-ai-template/app/api/v1/: flows.py  health.py
prototype-templates/langflow-ai-template/app/core/: config.py  database.py
prototype-templates/langflow-ai-template/app/services/: langflow_service.py
prototype-templates/langflow-ai-template/flows/: chat-basic.json  rag-qa.json
prototype-templates/python-backend-template/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
prototype-templates/python-backend-template/app/: __about__.py  __init__.py  main.py
prototype-templates/python-backend-template/app/api/: __init__.py
prototype-templates/python-backend-template/app/api/v1/: auth.py  users.py
prototype-templates/python-backend-template/app/core/: logging.py  middleware.py
prototype-templates/react-web-template/: .env.example  .eslintrc.json  .gitignore  README.md  docker-compose.yml  jest.config.js  jest.setup.js  next.config.ts  package.json  playwright.config.ts  prettier.config.js  tailwind.config.ts  tsconfig.json
prototype-templates/react-web-template/e2e/: homepage.spec.ts
prototype-templates/react-web-template/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
prototype-templates/react-web-template/src/hooks/: use-toast.ts
prototype-templates/react-web-template/src/lib/: utils.ts
prototype-templates/shared-configs/github-workflows/: ios-ci-cd.yml  python-backend-ci-cd.yml  react-ci-cd.yml
(+203 files in other folders)
